index.html welcome page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,11 +2,12 @@
 // You need the base only when you are not using bootstrap. In that case, go to _base.scss
 // to customize it as you may want.
 
-@import "variables";
-@import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Write your sass code here or import partials
+@import "variables";
+@import "base";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import"./header";
+@import"./hero";
+@import"./footer";
 
-h1 {
-  color: tomato;
-}
