--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,3 +15,62 @@
 // );
 
 // $spacer: 1rem;
+@mixin flex{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+@mixin image-size{
+    height: 20vh;
+    width: 45vw;
+    z-index: -2;
+    cursor: pointer;
+    
+    
+}
+@mixin image-size-768{
+    height: 20vh;
+    width: 20vw;
+    z-index: -2;
+    cursor: pointer;
+    
+    
+}
+@mixin span-grid{
+    z-index: -1;
+    margin-top: -3vh;
+        font-size: 1.2rem;
+        color: white;
+        background-color: $primary-color;
+        opacity: 0.9;
+        padding: 0.2rem 0.3rem;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.986);
+}
+@mixin p-overlay-over {
+          width: 90vw;
+          margin: 1vh auto;
+          transform: translateX(0%);
+          transition: transform 1s linear 1s;
+}
+@mixin flex-c{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+$primary-color :#561217 ;
+$primary-color-o :#561216ee ;
+$bg-color: #FBE5B6 ;
+
+$shadow : 5px 5px 10px rgba(0, 0, 0, 0.985);
+@mixin image-size-overlay{
+    height:22vh;
+    width: 80%;
+    border-radius: 15px;
+   
+    
+    
+}
