--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,9 +4,5 @@
 
 @import "variables";
 @import "../../node_modules/bootstrap/scss/bootstrap";
-
+@import "./base";
 // Write your sass code here or import partials
-
-h1 {
-  color: tomato;
-}
